start deep learning section on the report

--- a/report/capitulos/02_Planificacion.tex
+++ b/report/capitulos/02_Planificacion.tex
@@ -9,8 +9,15 @@
     \item \textbf{[OBJ4]} Aprender a organizar un proyecto de tamaño mediano y conocer las herramientas que se utilizan en la actualidad para su correcto desarrollo.
 \end{itemize}
 
-\section*{Tareas?}
-
+\section*{Tareas}
+\begin{itemize}
+    \item \textbf{[T1]} Estudio del estado del arte del problema.
+    \begin{itemize}
+        \item \textbf{[T1.1]} Lectura de publicaciones introductorios a las Cheminformatics.  
+        \item \textbf{[T1.2]} Conocimiento de las principales herramientas que se han desarrollado.
+        \item \textbf{[T1.2]} Repasar los principales modelos de Deep Learning.
+    \end{itemize}
+\end{itemize}
 
 \section*{Metodología de desarrollo}
 
@@ -109,7 +116,7 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
     \item \textbf{PyCharm 2021.3.3.} IDE desarrollado por la compañía JetBrains, ideal para trabajar con proyectos en Python e incluso con Jupyter Notebooks. Además, se integra directamente mediante SSH con el clúster GPU, permitiendo la sincronización de ficheros entre el espacio de trabajo local y el remoto. Aunque es un software de pago, los estudiantes pueden descargarlo de forma gratuita.
     \item \textbf{Git y GitHub.} Git es un software de control de versiones que permite ir almacenando versiones intermedias del código, de forma que se puede volver hacia atrás si es necesario. También facilita el trabajo en equipo, ya que puede combinar el trabajo de múltiples personas de forma automática (siempre y cuando no hayan trabajado sobre la misma línea). GitHub es una plataforma de alojamiento de proyectos que utilizan Git. Nos es útil, ya que actúa como almacenamiento de seguridad de nuestro trabajo.
     \item \textbf{Google Meet.} Producto de videoconferencias de Google. Es la plataforma oficial de comunicación síncrona en la Universidad de Granada. Será utilizado en las reuniones entre Rocío y Pedro.
-    \item \textbf{VSCode y \LaTeX.} VSCode es un editor de código desarrollado por Microsoft. Cuenta con multitud de extensiones creadas por la comunidad. Entre ellas destacan algunas que permiten el formateo y compilado de ficheros \LaTeX. Este software es un sistema de composición de textos utilizado para escribir esta memoria.
+    \item \textbf{VSCode y \LaTeX.} VSCode es un editor de código desarrollado por Microsoft. Cuenta con multitud de extensiones creadas por la comunidad, entre ellas destacan algunas que permiten el formateo y compilado de ficheros \LaTeX. Este software es un sistema de composición de textos utilizado para escribir esta memoria.
 \end{itemize}
 
 \section*{Presupuesto}
