sample images using transformer model trained with negative examples & add extra sections of the report

--- a/report/bibliografia/bibliografia.bib
+++ b/report/bibliografia/bibliografia.bib
@@ -61,3 +61,19 @@
   year={1988},
   publisher={ACS Publications}
 }
+
+@book{berzal2018redes,
+  title={Redes neuronales \& deep learning},
+  author={Berzal, Fernando},
+  note={\url{https://deep-learning.ikor.org}},
+  year={2018},
+  publisher={Independently published}
+}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
