--- a/report/capitulos/02_Planificacion.tex
+++ b/report/capitulos/02_Planificacion.tex
@@ -1,6 +1,6 @@
-\chapter*{Gestión y planificación del proyecto}
+\chapter{Gestión y planificación del proyecto}
 
-\section*{Objetivos}
+\section{Objetivos}
 
 \begin{itemize}
     \item \textbf{[OBJ1]} Conocer el estado del arte de las Cheminformatics: a qué se ha dedicado esta ciencia y algunas herramientas notables que se han desarrollado dentro de ella.
@@ -9,7 +9,7 @@
     \item \textbf{[OBJ4]} Aprender a organizar un proyecto de tamaño mediano y conocer las herramientas que se utilizan en la actualidad para su correcto desarrollo.
 \end{itemize}
 
-\section*{Tareas}
+\section{Tareas}
 \begin{itemize}
     \item \textbf{[T1]} Estudio del estado del arte del problema.
     \begin{itemize}
@@ -19,7 +19,7 @@
     \end{itemize}
 \end{itemize}
 
-\section*{Metodología de desarrollo}
+\section{Metodología de desarrollo}
 
 En los primeros años del desarrollo de software, este se creaba sin seguir ningún enfoque formal. Muchos de los proyectos que se iniciaban terminaban fracasando por los retrasos en la entrega, el mal funcionamiento del producto o por no cumplir los requisitos del cliente. Además, la complejidad requerida en el software iba aumentando con el tiempo. 
 
@@ -83,7 +83,7 @@ Cuando se trabaja con esta metodología, en cada equipo existe un miembro conoci
 
 Estas características y fases que hemos mencionado son las especificadas en la definición original de SCRUM. Aún así, en la práctica cada proyecto las adapta a sus necesidades. En general, los sprints suelen tener una duración de 2 o 3 semanas. 
 
-\section*{Temporización}
+\section{Temporización}
 
 Este proyecto se realiza en el marco de un Trabajo de Fin de Grado (TFG). En la Universidad de Granada está cuantificado en 12 créditos, lo que significan 300 horas de trabajo. Creemos que los objetivos propuestos son adecuados para ser realizados en ese número de horas, sin ser excesivos ni escasos.
 
@@ -91,16 +91,16 @@ Los TFGs se suelen realizar en un único cuatrimestre, que normalmente coincide 
 
 (Insertar diagrama de Gantt con las tareas/objetivos y su temporización)
 
-\section*{Gestión de recursos}
+\section{Gestión de recursos}
 
-\subsection*{Recursos humanos}
+\subsection{Recursos humanos}
 \noindent El proyecto cuenta con dos personas trabajando sobre él:
 \begin{itemize}
     \item \textbf{Rocío Romero Zaliz.} Profesora del Departamento de Ciencias de la Computación e Inteligencia Artificial tutora del proyecto. Encargada de supervisar al alumno, guiando su trabajo y aconsejándole cuando lo necesite. Se reunirá con él de forma periódica para comentar los avances e indicar posibles pasos a seguir.
     \item \textbf{Pedro Bedmar López.} Estudiante del Grado en Ingeniería Informática que realiza el TFG. Se encargará de su desarrollo y de la elaboración de la memoria.
 \end{itemize}
 
-\subsection*{Recursos materiales}
+\subsection{Recursos materiales}
 
 Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gran infraestructura para llevarse a cabo. En nuestro caso hacemos uso de lo siguiente:
 \begin{itemize}
@@ -109,7 +109,7 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
     \item \textbf{Clúster GPU.} Hoy en día, la mayoría del entrenamiento de modelos en Aprendizaje Automático y Deep Learning no se lleva a cabo de forma local, sino en un clúster habilitado para ello. La Universidad de Granada, y en concreto el CITIC-UGR, cuenta con uno de ellos donde mediante SLURM se pueden enviar trabajos que se ejecutaran en una GPU, acelerando en gran medida los entrenamientos.
 \end{itemize}
 
-\subsection*{Recursos software}
+\subsection{Recursos software}
 \noindent Utilizamos distintos programas que nos apoyan en distintas acciones:
 \begin{itemize}
     \item \textbf{macOS Monterey 12.3.1.} Por encima del resto de programas, se encuentra el Sistema Operativo, encargado de administrar los recursos hardware y controlar la ejecución de procesos.
@@ -119,20 +119,20 @@ Una ventaja del sector tecnológico es que muchos proyectos no necesitan una gra
     \item \textbf{VSCode y \LaTeX.} VSCode es un editor de código desarrollado por Microsoft. Cuenta con multitud de extensiones creadas por la comunidad, entre ellas destacan algunas que permiten el formateo y compilado de ficheros \LaTeX. Este software es un sistema de composición de textos utilizado para escribir esta memoria.
 \end{itemize}
 
-\section*{Presupuesto}
+\section{Presupuesto}
 En esta sección presentamos el presupuesto del proyecto.
 
-Al concluir, Pedro Bedmar López, trabajador autónomo con DNI 75935296Z, emitirá una única factura dirigida a la Universidad de Negev. El pago final se realizará mediante transferencia bancaria al número de cuenta especificado en ella.
+Al concluir, Pedro Bedmar López, trabajador autónomo con NIF 75935296Z, emitirá una única factura dirigida a la Universidad de Negev. El pago final se realizará mediante transferencia bancaria al número de cuenta especificado en ella.
 
-\subsection*{Coste de recursos humanos}
+\subsection{Coste de recursos humanos}
 La mayor parte del coste vendrá generado por las horas de trabajo dedicadas al proyecto.
 
 Pedro va a trabajar durante 300 horas. Según la Universidad Europea, el salario medio de un informático recién egresado ronda los 18000 - 22000€ al año \cite{salario_ue}. Si contamos el número de días hábiles para este año 2022, obtenemos 253 días \cite{dias_laborables}, a los que hay que restarle 22 días de vacaciones \cite{vacaciones}. En total trabajaría 231 días al año ocho horas por día, lo que hace un total de 1848 horas. Si tomamos como salario medio los 20000 euros anuales y los dividimos por el número de horas que se trabajan al año, obtenemos un coste por hora de 10.82€.
 
-\subsection*{Otros costes}
+\subsection{Otros costes}
 A la cantidad total hay que añadirle los impuestos y tasas correspondientes, en nuestro caso el IVA (21\%). También habrá que descontarle la retención de IRPF, para que la Universidad de Negev lo pague a Hacienda en mi nombre. En mi caso, por ser mi primer año como autónomo, el tipo de IRPF que me corresponde es del 7\%.
 
-\subsection*{Presupuesto final}
+\subsection{Presupuesto final}
 
 El presupuesto queda desglosado en la tabla inferior, siendo el importe total a percibir 3700.44€.
 
@@ -150,5 +150,5 @@ Hora de trabajo autónomo & 10.82€             & 300                    & 3246
 \end{tabular}
 \end{table}
 
-\section*{Entregable final y documentación}
+\section{Entregable final y documentación}
 El TFG  concluye cuando se entrega la versión final de este al cliente. Esto incluye tanto el código como la memoria. El código se hará llegar en un repositorio de GitHub, y la memoria se generará en formato PDF.
