--- a/report/capitulos/01_Introduccion.tex
+++ b/report/capitulos/01_Introduccion.tex
@@ -1,4 +1,4 @@
-\chapter*{Introducción}
+\chapter{Introducción}
 
 Debido al desarrollo exponencial de la informática en el último siglo, todas las ramas del conocimiento se han visto afectadas. La informática está permitiendo la automatización de muchas tareas que anteriormente se realizaban de forma manual por un operario. 
 
@@ -6,7 +6,7 @@ Con el paso de los años, esta capacidad de automatización va en aumento pudié
 
 La química es una de las ciencias que se ha impregnado de este desarrollo tecnológico y de esta combinación ha surgido lo que se conoce como cheminformatics o chemoinformatics. En este capítulo definiremos esta rama científica y describiremos sus principales actuaciones. A continuación, explicaremos distintos conceptos y tecnologías existentes relacionados con el proyecto.
 
-\section*{Motivación del proyecto}
+\section{Motivación del proyecto}
 Desde hace décadas, en el mundo de la química ha estado presente la necesidad de almacenar, gestionar y procesar la gran cantidad de información que se genera. Con el tiempo se fueron desarrollando técnicas de tratamiento de ésta, pero no fue hasta hace algunos años cuando se acuñó el nombre de cheminformatics o chemoinformatics. 
 
 En la literatura existen diferentes definiciones para este término, discutidas en \cite{doi:10.1021/ci600234z}. \\
